<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <parent>
    <groupId>io.github.dvgaba</groupId>
    <artifactId>easy-random</artifactId>
    <version>6.1.0-SNAPSHOT</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>easy-random-core</artifactId>
  <name>Easy Random Core</name>
  <description>Easy Random core implementation</description>
  <url>https://github.com/j-easy/easy-random</url>

  <scm>
    <url>git@github.com:j-easy/easy-random.git</url>
    <connection>scm:git:git@github.com:j-easy/easy-random.git</connection>
    <developerConnection>scm:git:git@github.com:j-easy/easy-random.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <ciManagement>
    <system>Github Actions</system>
    <url>https://github.com/j-easy/easy-random/actions</url>
  </ciManagement>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/j-easy/easy-random/issues</url>
  </issueManagement>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>http://opensource.org/licenses/mit-license.php</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>benas</id>
      <name>Mahmoud Ben Hassine</name>
      <email>mahmoud.benhassine@icloud.com</email>
      <url>http://benas.github.io</url>
      <roles>
        <role>Lead developer</role>
      </roles>
    </developer>
  </developers>

  <dependencies>
    <dependency>
      <groupId>io.github.classgraph</groupId>
      <artifactId>classgraph</artifactId>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.objenesis</groupId>
      <artifactId>objenesis</artifactId>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>14</source>
          <target>14</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>
